--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,9 @@
 
     <!--Create grid layout-->
     <div class="container">
+        <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Experience</h3>
         <div class = "p-4">
-            <div id = "leftCard1" class = "card">
+            <div id = "Card1" class = "card">
                 <div class = "card-header bg-dark text-light">
                     LinkedIn
                 </div>
@@ -56,7 +57,7 @@
         </div>
 
         <div class = "p-4">
-            <div id = "leftCard1" class = "card">
+            <div id = "Card2" class = "card">
                 <div class = "card-header bg-dark text-light">
                     GitHub
                 </div>
@@ -70,7 +71,7 @@
         </div>
 
         <div class = "p-4">
-            <div id = "leftCard1" class = "card">
+            <div id = "Card3" class = "card">
                 <div class = "card-header bg-dark text-light">
                     Email
                 </div>
