--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                             XSEDE Data Science Internship (Summer 2020)
                         </div>
                         <div class = "p-4">
-                            <p class = "card-text">
+                            <p class = "card-text text-dark">
                                 At XSEDE, I was responsible to learn to apply data analysis and computational thinking to a social challenge that existed in Los Angeles. I found gunshot detection systems to be a potential solution towards gun violence. I accessed nationwide police departments CSV files who already use similar technologies. I used IDE’s such as Jupyter Notebook and RStudio, to design and write code to create, analytical/statistical graphs, tables, and charts to evaluate my data. With my data gathered, and the help of my mentor, I created a presentation to present my findings, data, and solution at the conclusion of my internship. 
                             </p>
                         </div>
@@ -66,7 +66,7 @@
                             NASA Data Intensive Research and Education for STEM (August 2019 - March 2020)
                         </div>
                         <div class = "p-4">
-                            <p class = "card-text">
+                            <p class = "card-text text-dark">
                                 At NASA DIRECT STEM, I was mentored and trained with professionals from UC Irvine, and JPL in computational physics, cloud computing, and data analysis by attending workshops that directly met NASA’s mission goal and standards. My selected contributions consisted of reinforcing my python skills by analyzing and developing two-dimensional and three-dimensional statistical graphs consisting of climate change data. With the contributions from XSEDE and TACC, I also had hands on experience to upload my work to supercomputers and understand their fundamental functions.
                             </p>
                         </div>
@@ -81,15 +81,13 @@
                 <!--Right card 1-->
                 <div class = "p-3">
                     <div id = "rightCard1" class = "card">
-                        <div class = "p-4">
+                        <div class = "p-4 text-dark">
                             <p class = "card-text">
-                                <div class="dark">
                                     <p>- Proficiency in Java, procedural programming, object oriented programming, data structures, and algorithms </p>
                                     <p>- Fundamanetal knowledge in Python, procedural programming, corresponding libraries, and syntax </p>
                                     <p>- Fundamentl knowledge in MySQL databases</p>
                                     <p>- Fundamentl knowedge in MongoDB databases</p>
                                     <p>- Beginner in HTML5, CSS, and Bootstrap </p>
-                                  </div>
                             </p>
                         </div>
                     </div>
