--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     LinkedIn
                 </div>
                 <div class = "p-5">
-                    <p class = "card-text">
+                    <p class = "card-text text-dark">
                         If you would like to learn more information about me, or have a chat with me, feel free to onnect with me!
                     </p>
                     <a class="btn btn-primary" href="https://www.linkedin.com/in/marcog12000" role="button">Visit my LinkedIn</a>
@@ -62,7 +62,7 @@
                     GitHub
                 </div>
                 <div class = "p-5">
-                    <p class = "card-text">
+                    <p class = "card-text text-dark">
                         If you would like to take a look of some of my past work, take a look at my GitHub. My GitHub includes various repository involving JavaFX, object oriented programming, data structures, and algoeithms.
                     </p>
                     <a class="btn btn-primary" href="https://github.com/mgonzalez12000" role="button">Visit my GitHub</a>
@@ -76,7 +76,7 @@
                     Email
                 </div>
                 <div class = "p-5">
-                    <p class = "card-text">
+                    <p class = "card-text text-dark">
                         If you would like to contact me about any opportunities, be sure to contact me through my email! 
                     </p>
                 <a class="btn btn-primary" href="mailto: mgonzalez12000@gmail.com" role="button">Send Email</a>
