--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
     <!--Create grid layout-->
     <div class="container">
-        <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Experience</h3>
+        <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Contact Me</h3>
         <div class = "p-4">
             <div id = "Card1" class = "card">
                 <div class = "card-header bg-dark text-light">
