--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
-                        If you would like to learn more information about me, or have a chat with me, feel free to onnect with me!
+                        If you would like to learn more information about me and what I am up to, connect with me on LinkedIn!
                     </p>
                     <a class="btn btn-primary" href="https://www.linkedin.com/in/marcog12000" role="button">Visit my LinkedIn</a>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
-                        If you would like to take a look of some of my past work, take a look at my GitHub. My GitHub includes various repository involving JavaFX, object oriented programming, data structures, and algoeithms.
+                        If you would like to take a look at some of my past work, my GitHub is the perfect place to visit. My GitHub includes various repositories of my own involving JavaFX, object oriented programming, data structures, and algoeithms.
                     </p>
                     <a class="btn btn-primary" href="https://github.com/mgonzalez12000" role="button">Visit my GitHub</a>
                 </div>
@@ -77,7 +77,7 @@
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
-                        If you would like to contact me about any opportunities, be sure to contact me through my email! 
+                        If you would like to contact me about any opportunities, feel free to contact me through my email! 
                     </p>
                 <a class="btn btn-primary" href="mailto: mgonzalez12000@gmail.com" role="button">Send Email</a>
             </div>
