--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
-            <a class = "navbar-brand" href="index.php">
+            <a class = "navbar-brand">
                 <em class = "fas fa-laptop-code fa-lg"> Marco's Website</em>
             </a>
             <!--Create collapse button for small nav bar-->
