--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
-            <a class = "navbar-brand" href="index.php">
+            <a class = "navbar-brand">
                 <em class = "fas fa-laptop-code fa-lg"> Marco's Website</em>
             </a>
             <!--Create collapse button for small nav bar-->
@@ -45,7 +45,7 @@
         <div class = "p-4">
             <div id = "Card1" class = "card">
                 <div class = "card-header bg-dark text-light">
-                    LinkedIn
+                    <em class="fab fa-linkedin"> LinkedIn</em>
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
@@ -59,7 +59,7 @@
         <div class = "p-4">
             <div id = "Card2" class = "card">
                 <div class = "card-header bg-dark text-light">
-                    GitHub
+                    <em class="fab fa-github"> GitHub</em>
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
@@ -73,7 +73,7 @@
         <div class = "p-4">
             <div id = "Card3" class = "card">
                 <div class = "card-header bg-dark text-light">
-                    Email
+                    <e class="fas fa-envelope-square"> Email</e>
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
