--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-	<!--- Navigation -->
-
+	
+    <!--- Navigation -->
 	<nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
@@ -38,6 +38,14 @@
         </div>
     </nav>
 	<!--- End Navigation -->
+
+    <!--- Image Slider -->
+	<div class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active"><img src="profile.jpg"></div>
+		</div>
+	</div>
+	<!--- End Image Slider -->
 
     <!--Create grid layout-->
     <div class="container">
