--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,9 @@
     </nav>
 	<!--- End Navigation -->
 
-    <!--- Image Slider -->
-	<div class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active"><img src="profile.jpg"></div>
-		</div>
-	</div>
-	<!--- End Image Slider -->
+    <!--Profile picture-->
+    <img src="profile.jpg" alt="Paris" class="center">
+    <!--end of profile picture-->
 
     <!--Create grid layout-->
     <div class="container">
