--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
-                        If you would like to take a look at some of my past work, my GitHub is the perfect place to visit. My GitHub includes various repositories of my own involving JavaFX, object oriented programming, data structures, and algoeithms.
+                        If you would like to take a look at some of my past work, my GitHub is the perfect place to visit. My GitHub includes various repositories of my own involving JavaFX, object oriented programming, data structures, and algorithms.
                     </p>
                     <a class="btn btn-primary" href="https://github.com/mgonzalez12000" role="button">Visit my GitHub</a>
                 </div>
