--- a/about.html
+++ b/about.html
@@ -62,7 +62,13 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                At XSEDE, I was responsible to learn to apply data analysis and computational thinking to a social challenge that existed in Los Angeles. I found gunshot detection systems to be a potential solution towards gun violence. I accessed nationwide police departments CSV files who already use similar technologies. I used IDE’s such as Jupyter Notebook and RStudio, to design and write code to create, analytical/statistical graphs, tables, and charts to evaluate my data. With my data gathered, and the help of my mentor, I created a presentation to present my findings, data, and solution at the conclusion of my internship. 
+                                At XSEDE, I was responsible to learn to apply data analysis and computational thinking to a 
+                                social challenge that existed in Los Angeles. I found gunshot detection systems to be a 
+                                potential solution towards gun violence. I accessed nationwide police departments CSV files 
+                                who already use similar technologies. I used IDE’s such as Jupyter Notebook and RStudio, 
+                                to design and write code to create, analytical/statistical graphs, tables, and charts to 
+                                evaluate my data. With my data gathered, and the help of my mentor, I created a presentation 
+                                to present my findings, data, and solution at the conclusion of my internship. 
                             </p>
                         </div>
                     </div>
@@ -75,7 +81,12 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                At NASA DIRECT STEM, I was mentored and trained with professionals from UC Irvine, and JPL in computational physics, cloud computing, and data analysis by attending workshops that directly met NASA’s mission goal and standards. My selected contributions consisted of reinforcing my python skills by analyzing and developing two-dimensional and three-dimensional statistical graphs consisting of climate change data. With the contributions from XSEDE and TACC, I also had hands on experience to upload my work to supercomputers and understand their fundamental functions.
+                                At NASA DIRECT STEM, I was mentored and trained with professionals from UC Irvine, and JPL in 
+                                computational physics, cloud computing, and data analysis by attending workshops that directly 
+                                met NASA’s mission goal and standards. My selected contributions consisted of reinforcing my 
+                                python skills by analyzing and developing two-dimensional and three-dimensional statistical graphs 
+                                consisting of climate change data. With the contributions from XSEDE and TACC, I also had hands on 
+                                experience to upload my work to supercomputers and understand their fundamental functions.
                             </p>
                         </div>
                     </div>
@@ -85,17 +96,98 @@
             <!--Right side-->
             <div class="m-0 p-2 col-md-5 col-lg-5 ">
                 <!--Header-->
-                <h3 id = "rightAd" class = "border-bottom border-light text-light  p-2">What do I know?</h3>
+                <h3 id = "rightcard" class = "border-bottom border-light text-light  p-2">Technical Skills</h3>
                 <!--Right card 1-->
-                <div class = "p-3">
+                <div class = "p-4">
                     <div id = "rightCard1" class = "card">
-                        <div class = "p-4 text-dark">
-                            <p class = "card-text">
-                                    <p>- Proficiency in Java, procedural programming, object oriented programming, data structures, and algorithms </p>
-                                    <p>- Fundamanetal knowledge in Python, procedural programming, corresponding libraries, and syntax </p>
-                                    <p>- Fundamentl knowledge in MySQL databases</p>
-                                    <p>- Fundamentl knowedge in MongoDB databases</p>
-                                    <p>- Beginner in HTML5, CSS, and Bootstrap </p>
+                        <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-code"> Languages</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - Java
+                            </p>
+                            <p class = "card-text text-dark">
+                                - Python
+                            </p>
+                            <p class = "card-text text-dark">
+                                - HTML
+                            </p>
+                            <p class = "card-text text-dark">
+                                - CSS/Bootstrap
+                            </p>
+                            <p class = "card-text text-dark">
+                                - MySQL
+                            </p>
+                            <p class = "card-text text-dark">
+                                - MongoDB
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 2-->
+                <div class = "p-4">
+                    <div id = "rightCard2" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-toolbox"> Programming Tools</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - Eclipse IDE
+                            </p>
+                            <p class = "card-text text-dark">
+                                - Visual Studio Code
+                            </p>
+                            <p class = "card-text text-dark">
+                                - Sublime Text
+                            </p>
+                            <p class = "card-text text-dark">
+                                - MySQL WorkBench
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 3-->
+                <div class = "p-4">
+                    <div id = "rightCard3" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-folder-open"> File Transfer & Deployment</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - FileZiila (File Transfer Protocol)
+                            </p>
+                            <p class = "card-text text-dark">
+                                - WinSCP (File Transfer Protocol)
+                            </p>
+                            <p class = "card-text text-dark">
+                                - Globus Connect Personal
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 4-->
+                <div class = "p-4">
+                    <div id = "rightCard4" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-code-branch"> Management Tools</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - Github
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 4-->
+                <div class = "p-4">
+                    <div id = "rightCard5" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-file-code"> API's</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - Java Servlets
                             </p>
                         </div>
                     </div>
