--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                - Github
+                                - GitHub
                             </p>
                         </div>
                     </div>
