--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<title>Contact Me</title>
+	<title>About Me</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet">
 </head>
@@ -111,10 +111,10 @@
                                 - Python
                             </p>
                             <p class = "card-text text-dark">
-                                - HTML
+                                - HTML, JSP, JSTL, MVC
                             </p>
                             <p class = "card-text text-dark">
-                                - CSS/Bootstrap
+                                - CSS/BoostStrap
                             </p>
                             <p class = "card-text text-dark">
                                 - MySQL
@@ -170,6 +170,22 @@
                 <div class = "p-4">
                     <div id = "rightCard4" class = "card">
                         <div class = "card-header bg-dark text-light">
+                            <em class="fas fa-paste"> Documentation</em>
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                - Microsoft Office (Word, Powerpoint, Excel)
+                            </p>
+                            <p class = "card-text text-dark">
+                                - Data flow diagaram (DFD), Software design and implimentation
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 5-->
+                <div class = "p-4">
+                    <div id = "rightCard5" class = "card">
+                        <div class = "card-header bg-dark text-light">
                             <em class="fas fa-code-branch"> Management Tools</em>
                         </div>
                         <div class = "p-4">
@@ -179,9 +195,9 @@
                         </div>
                     </div>
                 </div>
-                <!--Right card 4-->
+                <!--Right card 6-->
                 <div class = "p-4">
-                    <div id = "rightCard5" class = "card">
+                    <div id = "rightCard6" class = "card">
                         <div class = "card-header bg-dark text-light">
                             <em class="fas fa-file-code"> API's</em>
                         </div>
