--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                - Microsoft Office (Word, Powerpoint, Excel)
+                                - Microsoft Office (Word, PowerPoint, Excel)
                             </p>
                             <p class = "card-text text-dark">
                                 - Data flow diagaram (DFD), Software design and implimentation
