--- a/about.html
+++ b/about.html
@@ -91,6 +91,24 @@
                         </div>
                     </div>
                 </div>
+                <!--Left card 3-->
+                <div class = "p-4">
+                    <div id = "leftCard3" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            Student Mentor at SIGHPC's Computing4Change (Upcoming November 2021)
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                As a student mentor, I will be in charge of a group of students throughout the duration of their
+                                project. My responsibilities are but not limited to helping/guiding students with little to no
+                                programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
+                                to come up with their own solutions, help students troubleshoot their code, and give students the appropiate 
+                                guidance throughout their project. Furthermore, prior to the start date, I am currently taking part of 
+                                team committee meetings to go over program details, and ways to increase student engagement.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <!--Right side-->
@@ -105,7 +123,7 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                - Java
+                                - Java (Object Oriented, Servlets, Java Database Connection - JDBC)
                             </p>
                             <p class = "card-text text-dark">
                                 - Python
@@ -137,6 +155,9 @@
                             </p>
                             <p class = "card-text text-dark">
                                 - Visual Studio Code
+                            </p>
+                            <p class = "card-text text-dark">
+                                - PyCharm
                             </p>
                             <p class = "card-text text-dark">
                                 - Sublime Text
