--- a/about.html
+++ b/about.html
@@ -54,6 +54,24 @@
             <div class="m-0 p-2 col-md-7 col-lg-7">
                 <!--Header-->
                 <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Experience</h3>
+                <!--Left card 3-->
+                <div class = "p-4">
+                    <div id = "leftCard3" class = "card">
+                        <div class = "card-header bg-dark text-light">
+                            Student Mentor at SIGHPC's Computing4Change (Upcoming November 2021)
+                        </div>
+                        <div class = "p-4">
+                            <p class = "card-text text-dark">
+                                As a student mentor, I will be in mentoring a group of students throughout the duration of their
+                                project. My responsibilities are but not limited to helping/guiding students with little to no
+                                programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
+                                for their solutions, help students troubleshoot their code, and give students the appropiate 
+                                guidance throughout their project. Furthermore, prior to the start date, I am currently taking part of 
+                                team committee meetings to go over program details, and ways to increase student engagement.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <!--Left card 1-->
                 <div class = "p-4">
                     <div id = "leftCard1" class = "card">
@@ -87,24 +105,6 @@
                                 python skills by analyzing and developing two-dimensional and three-dimensional statistical graphs 
                                 consisting of climate change data. With the contributions from XSEDE and TACC, I also had hands on 
                                 experience to upload my work to supercomputers and understand their fundamental functions.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!--Left card 3-->
-                <div class = "p-4">
-                    <div id = "leftCard3" class = "card">
-                        <div class = "card-header bg-dark text-light">
-                            Student Mentor at SIGHPC's Computing4Change (Upcoming November 2021)
-                        </div>
-                        <div class = "p-4">
-                            <p class = "card-text text-dark">
-                                As a student mentor, I will be in charge of a group of students throughout the duration of their
-                                project. My responsibilities are but not limited to helping/guiding students with little to no
-                                programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
-                                to come up with their own solutions, help students troubleshoot their code, and give students the appropiate 
-                                guidance throughout their project. Furthermore, prior to the start date, I am currently taking part of 
-                                team committee meetings to go over program details, and ways to increase student engagement.
                             </p>
                         </div>
                     </div>
