--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                - Java (Object Oriented, Servlets, Java Database Connection - JDBC)
+                                - Java (Object Oriented, Servlets, Java Database Connection aka JDBC)
                             </p>
                             <p class = "card-text text-dark">
                                 - Python
