--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                                 - CSS/BoostStrap
                             </p>
                             <p class = "card-text text-dark">
-                                - MySQL
+                                - SQL
                             </p>
                         </div>
                     </div>
