--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                As a student mentor, I will be in mentoring a group of students throughout the duration of their
+                                As a student mentor, I will be mentoring a group of students throughout the duration of their
                                 project. My responsibilities are but not limited to helping/guiding students with little to no
                                 programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
                                 for their solutions, help students troubleshoot their code, and give students the appropiate 
