--- a/contact.html
+++ b/contact.html
@@ -85,13 +85,27 @@
         </div>
 
         <div class = "p-4">
-            <div id = "Card1" class = "card">
+            <div id = "Card3" class = "card">
                 <div class = "card-header bg-dark text-light">
-                    <em class="fas fa-envelope-square"> Send message</em>
+                    <em class="fas fa-envelope-square"> Email</em>
                 </div>
                 <div class = "p-5">
                     <p class = "card-text text-dark">
-                        If you would like to contact me about any opportunities, feel free to send me a message! I will answer back as soon as I can!
+                        If you would like to contact me about any opportunities, feel free to send me an email!
+                    </p>
+                    <a class="btn btn-primary" href="mailto: mgonzalez12000@gmail.com" role="button">Send Email</a>
+                </div>
+            </div>
+        </div>
+
+        <div class = "p-4">
+            <div id = "Card4" class = "card">
+                <div class = "card-header bg-dark text-light">
+                    <em class="fas fa-inbox"> Send message</em>
+                </div>
+                <div class = "p-5">
+                    <p class = "card-text text-dark">
+                        If your message is urgent, please send me a message with your contact information!
                     </p>
                     <p style="color:red;">
                         NOTE: Once you hit 'Send Message', your message will be sent. Clearing the form is a bug that needs to be fixed.
