--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
     </nav>
 	<!--- End Navigation -->
+	<div class="container">
 
 	<!--- Image Slider -->
 	<div class="carousel slide" data-ride="carousel">
