--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     
 	<!--- Navigation -->
-	<nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
+	<nav class = "navbar navbar-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
             <a class = "navbar-brand">
