--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
 	
     <!--- Navigation -->
-	<nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
+	<nav class = "navbar navbar-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
             <a class = "navbar-brand">
@@ -48,11 +48,13 @@
         </div>
     </nav>
 	<!--- End Navigation -->
-
-    <!--Profile picture-->
-    <img src="profile.jpg" alt="Paris" class="center">
-    <!--end of profile picture-->
-
+    	<!--- Image Slider -->
+	<div class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active"><img src="background.jpg"></div>
+		</div>
+	</div>
+	<!--- End Image Slider -->
     <!--Create grid layout-->
     <div class="container">
         <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Contact Me</h3>
