--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<h1>Welcome</h1>
 	 </div>
 
-	<div class="m-5 p-20 col-md-20 ">
+	<div class="m-5 ">
 		<div class="card">
 			<div class="card-body">
 				<p>I am a computer science student pursuing a bachelors of science at California State University, Los Angeles. During my time at CSULA, I have dedicated a lot of my own time to study and learn about the different fields of study for computer science. As a result, I have found interests in data science, web & internet programming, software engineering, and Agile/DevOps methodology. Due to my devotion and hard work, I have found myself to be fortunate enough to find and take part of opportunities to showcase and test my programming skills. Some of my hobbies include coding, playing videogames, listening/discovering new music, and hanging out with my friends. I also love puppies! I initially created my personal website with no prior knowledge of web development. As I continue to learn more technologies, expect this website to constantly be improving and changing. This website uses HTML, CSS, and the Bootstrap framework for responsiveness. Feel free to take a look!</p>
