--- a/about.html
+++ b/about.html
@@ -30,9 +30,6 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="about.html">About Me</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact Me</a>
-					</li>
 				</ul>
             </div>
         </div>
@@ -45,8 +42,27 @@
 			<div class="carousel-item active"><img src="nasa.jpg"></div>
 		</div>
 	</div>
-	<!--- End Image Slider -->
-
+    <!--End image slider-->
+    <!--Begin chart of skills-->
+    <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Technical Skills</h3>
+    <div class = "container" id = 'skillschart'>
+        <h2>Java</h2>
+        <div class = "line line1">100%</div>
+        <h2>Python</h2>
+        <div class = "line line2">100%</div>
+        <h2>Javascript</h2>
+        <div class = "line line3">60%</div>
+        <h2>HTML</h2>
+        <div class = "line line4">90%</div>
+        <h2>CSS</h2>
+        <div class = "line line5">90%</div>
+        <h2>SQL</h2>
+        <div class = "line line6">75%</div>
+        <h2>Git</h2>
+        <div class = "line line7">55%</div>
+    </div>
+    <!--End chart of skills-->
+    <!--Experience section-->
     <!--Create grid layout-->
     <div class = "container">
         <div class = "row">
@@ -114,32 +130,7 @@
             <!--Right side-->
             <div class="m-0 p-2 col-md-5 col-lg-5 ">
                 <!--Header-->
-                <h3 id = "rightcard" class = "border-bottom border-light text-light  p-2">Technical Skills</h3>
-                <!--Right card 1-->
-                <div class = "p-4">
-                    <div id = "rightCard1" class = "card">
-                        <div class = "card-header bg-dark text-light">
-                            <em class="fas fa-code"> Languages</em>
-                        </div>
-                        <div class = "p-4">
-                            <p class = "card-text text-dark">
-                                - Java (Object Oriented, Servlets, Java Database Connection aka JDBC)
-                            </p>
-                            <p class = "card-text text-dark">
-                                - Python
-                            </p>
-                            <p class = "card-text text-dark">
-                                - HTML, JSP, JSTL, MVC
-                            </p>
-                            <p class = "card-text text-dark">
-                                - CSS/BoostStrap
-                            </p>
-                            <p class = "card-text text-dark">
-                                - SQL
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <h3 id = "rightcard" class = "border-bottom border-light text-light  p-2">Technologies</h3>
                 <!--Right card 2-->
                 <div class = "p-4">
                     <div id = "rightCard2" class = "card">
@@ -229,7 +220,14 @@
             </div>
         </div>
     </div>
-
+    <!--Download resume-->
+    <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Resume</h3>
+    <br> <br>
+    <div class="d-flex justify-content-center">
+        <a href="resume.pdf" download="resume.pdf"><button class="btn"><i class="fa fa-download"></i> Download resume</button></a>
+    </div>
+    <br>
+    <br>
 	<!--- Start Footer -->
 	<footer>
 		<div class="text-center p-2 text-light">
@@ -240,6 +238,7 @@
 
 <!--- Script Source Files -->
 <!--Font Awesome-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <!--- End of Script Source Files -->
